add: update database endpoint
